# rust-os

./: .gitignore  LICENSE  Makefile  README.md
assets/: Makefile  startup.nsh
bootloader_uefi/: Cargo.toml  Makefile
bootloader_uefi/src/: loaded_asset_list.rs  main.rs
bootloader_uefi/src/uefi/: boot_services.rs  configuration_table.rs  file_protocol.rs  graphics_output_protocol.rs  loaded_image_protocol.rs  memory_map.rs  mod.rs  simple_file_system_protocol.rs  simple_text_output_protocol.rs  system_table.rs
bootloader_uefi/src/unicode/: mod.rs  unicode.rs
docs/: TODO.md
docs/design/: kernel_heap_allocator.md  physical_memory_manager.md  virtual_memory_manager.md
docs/images/physical_memory_manager/: microkernel-physical-memory.drawio  monokernel-physical-memory.drawio
elf/src/: elf_header_64.rs
kernel/: Cargo.toml  Makefile  kernel.ld
kernel/src/: init.s  kernel_main.rs  lib.rs
kernel/src/memory/: mod.rs  physical_frame_allocator.rs  temp_allocator.rs  virtual_memory_manager.rs
libraries/: Makefile
libraries/acpi_system_tables/: Cargo.toml
libraries/acpi_system_tables/src/: lib.rs  rsdp.rs  rsdt.rs  system_description_table.rs  xsdt.rs
libraries/bootinfo/: Cargo.toml
libraries/data_structures/: Makefile
libraries/elf/: Cargo.toml
libraries/x86_64_hardware/: Cargo.toml  Makefile
x86_64_hardware/: Cargo.toml  Makefile
x86_64_hardware/src/: lib.rs
x86_64_hardware/src/devices/: uart_16550.rs
x86_64_hardware/src/memory/: address.rs
x86_64_hardware/src/memory/paging/: mod.rs  page_frame_allocator.rs  page_table_manager.rs
(+24 files in other folders)
