[package]
name = "bootloader_uefi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r-efi = "4.1.0"
bitmap = { path = "../libraries/bitmap" }
bootinfo = { path = "../libraries/bootinfo" }
elf = { path = "../libraries/elf" }
x86_64_hardware = { path = "../x86_64_hardware" }
