[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
bootinfo = { path = "../libraries/bootinfo" }
x86_64_hardware = { path = "../libraries/x86_64_hardware" }
data_structures = { path = "../libraries/data_structures" }
