[package]
name = "x86_64_hardware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmap = { path = "../libraries/bitmap" }
spin = "0.9.6"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
